--- a/views/home.ejs
+++ b/views/home.ejs
@@ -77,7 +77,7 @@
                 
                 <!-- right side -->
                 <div class="col-md-6" style="background-color: #F0F1F3;">
-                
+                    hello
                 </div>
             </div>
             
