I changed the text in 1st card to 'course 1'

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,6 +73,7 @@
                 <!-- left side -->
                 <div class="col-md-6" style="background-color: #F0F1F3;">
                     <%-include('partials/chart.ejs');-%>
+                    hello
                 </div>
                 
                 <!-- right side -->
