--- a/views/partials/overall-points.ejs
+++ b/views/partials/overall-points.ejs
@@ -1,7 +1,7 @@
 <div class="overall-points">
     <div class="row d-flex justify-content-center">
         <div class="col-md-2 point-card" >
-            hello
+            course 1
         </div>
         <div class="col-md-2 point-card" >hello</div>
         <div class="col-md-2 point-card" >hello</div>
