--- a/views/partials/overall-points.ejs
+++ b/views/partials/overall-points.ejs
@@ -1,10 +1,36 @@
 <div class="overall-points">
     <div class="row d-flex justify-content-center">
         <div class="col-md-2 point-card" >
-            course 1
+            <div class="crs-title">CEN4010</div>
+            <p style="margin-left: 4px; color:rgb(82, 104, 126);">
+                TF 9:30AM<br>
+                EE Rm106<br>
+                Dr. Lofton Bullard
+            </p>
         </div>
-        <div class="col-md-2 point-card" >hello</div>
-        <div class="col-md-2 point-card" >hello</div>
-        <div class="col-md-2 point-card" >hello</div>
+        <div class="col-md-2 point-card" >
+            <div class="crs-title" style="background-color: rgb(252, 153, 150);">course name</div>
+            <p style="margin-left: 4px; color:rgb(82, 104, 126);">
+                Schedule<br>
+                Location<br>
+                Prof Name
+            </p>
+        </div>
+        <div class="col-md-2 point-card" >
+            <div class="crs-title" style="background-color: rgb(245, 222, 146);">course name</div>
+            <p style="margin-left: 4px; color:rgb(82, 104, 126);">
+                Schedule<br>
+                Location<br>
+                Prof Name
+            </p>
+        </div>
+        <div class="col-md-2 point-card" >
+            <div class="crs-title" style="background-color: rgb(207, 127, 214);">course name</div>
+            <p style="margin-left: 4px; color:rgb(82, 104, 126);">
+                Schedule<br>
+                Location<br>
+                Prof Name
+            </p>
+        </div>
     </div>
 </div>
