--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,7 +44,7 @@
     }
     .point-card{
         background-color: white;
-        height: 80px;
+        height: 110px;
         /* width: 250px; */
         margin-top: 25px;
         margin-left: 15px;
@@ -61,7 +61,15 @@
         margin-top: 25px;
 
     }
-    
+    .crs-title{
+        background-color: rgb(130, 164, 238);
+        height: 30px;
+        width: 100%;
+        border-radius: 5px; 
+        text-align: center;
+        color:white;
+    }
+
 </style>
 <body>
     <div class="full-content">
