changed overall-points.ejs from prof  to profile

--- a/views/partials/overall-points.ejs
+++ b/views/partials/overall-points.ejs
@@ -21,7 +21,7 @@
             <p style="margin-left: 4px; color:rgb(82, 104, 126);">
                 Schedule<br>
                 Location<br>
-                Prof Name
+                Profile Name
             </p>
         </div>
         <div class="col-md-2 point-card" >
